thêm đề mục sản phẩm

--- a/WebBanHang/Views/Home/Index.cshtml
+++ b/WebBanHang/Views/Home/Index.cshtml
@@ -8,5 +8,15 @@
         <img src="/Content/images/banner.jpg" alt="Banner" class="img-fluid" /><!--phần này tự thêm ảnh vào-->
     </div>
     <div style="text-align:center">iPhone</div>
-
+    <!-- thêm sản phẩm iPhone vào-->
+    <div style="text-align:center">iPad</div>
+    <!--thêm sp ipad vào-->
+    ,<div style="text-align:center">Mac</div>
+    <!--thêm sp mac vào-->
+    <div style="text-align:center">Watch</div>
+    <!--thêm sp watch vào-->
+    <div style="text-align:center">Âm thanh</div>
+    <!--thêm sp âm thanh vào-->
+    <div style="text-align:center">Phụ kiện</div>
+    <!--thêm sp phụ kiện vào-->
 </main>
