thêm bộ lọc iphone

--- a/WebBanHang/Views/Product/Iphone.cshtml
+++ b/WebBanHang/Views/Product/Iphone.cshtml
@@ -2,8 +2,140 @@
 @{
     ViewBag.Title = "Iphone";
     Layout = "~/Views/Shared/_Layout.cshtml";
-}
 
-<h2>Iphone</h2>
+}
+<h2 style="text-align:center">Iphone</h2>
+<!--banner-->
+<div><img src="~/Images/BannerIphone.jpg" alt="Banner Iphone"/></div><!--phần này tự thêm ảnh vào-->        
 <p>đây là trang iphone</p>
+<div class="container my-5">
+    <div class="row">
+        <!-- Bộ lọc bên trái -->
+        <div class="col-md-3">
+            <h5 class="mb-3">Bộ lọc sản phẩm</h5>
+            <!-- Checkbox17 -->
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="iphone17Main">
+                <label class="form-check-label" for="iphone17Main">iPhone 17 Series</label>
+            </div>
+            <!--series17-->
+            <div id="iphone17Series" class="ms-4 mb-4" style="display: none;">
+                <h6 class="mb-2">Chọn dòng iPhone 17:</h6>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone17">
+                    <label class="form-check-label" for="iphone17">iPhone 17</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone17Pro">
+                    <label class="form-check-label" for="iphone17Pro">iPhone 17 Pro</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone17ProMax">
+                    <label class="form-check-label" for="iphone17ProMax">iPhone 17 Pro Max</label>
+                </div>
+            </div>
+            <!--checkbox16-->
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="iphone16Main">
+                <label class="form-check-label" for="iphone16Main">iPhone 16 Series</label>
+            </div>
+            <!--series16-->
+            <div id="iphone16Series" class="ms-4 mb-4" style="display: none;">
+                <h6 class="mb-2">Chọn dòng iPhone 16:</h6>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone16">
+                    <label class="form-check-label" for="iphone16">iPhone 16</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone16Pro">
+                    <label class="form-check-label" for="iphone16Pro">iPhone 16 Pro</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone16ProMax">
+                    <label class="form-check-label" for="iphone16ProMax">iPhone 16 Pro Max</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone16e">
+                    <label class="form-check-label" for="iphone16e">iPhone 16e</label>
+                </div>
+            </div>
+            <!--checkbox15-->
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="iphone15Main">
+                <label class="form-check-label" for="iphone15Main">iPhone 15 Series</label>
+            </div>
+            <!--series15-->
+            <div id="iphone15Series" class="ms-4 mb-4" style="display: none;">
+                <h6 class="mb-2">Chọn dòng iPhone 15:</h6>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone15">
+                    <label class="form-check-label" for="iphone15">iPhone 15</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone15Pro">
+                    <label class="form-check-label" for="iphone15Pro">iPhone 15 Pro</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone15ProMax">
+                    <label class="form-check-label" for="iphone15ProMax">iPhone 15 Pro Max</label>
+                </div>
+            </div>
+            <!--checkbox14-->
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="iphone14Main">
+                <label class="form-check-label" for="iphone14Main">iPhone 14 Series</label>
+            </div>
+            <!--series14-->
+            <div id="iphone14Series" class="ms-4 mb-4" style="display: none;">
+                <h6 class="mb-2">Chọn dòng iPhone 14:</h6>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone14">
+                    <label class="form-check-label" for="iphone14">iPhone 14</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone14Pro">
+                    <label class="form-check-label" for="iphone14Pro">iPhone 14 Pro</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone14ProMax">
+                    <label class="form-check-label" for="iphone14ProMax">iPhone 14 Pro Max</label>
+                </div>
+            </div>
+            <!--checkbox13-->
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="iphone13Main">
+                <label class="form-check-label" for="iphone13Main">iPhone 13 Series</label>
+            </div>
+            <!--series13-->
+            <div id="iphone13Series" class="ms-4 mb-4" style="display: none;">
+                <h6 class="mb-2">Chọn dòng iPhone 13:</h6>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone13">
+                    <label class="form-check-label" for="iphone13">iPhone 13</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone13Pro">
+                    <label class="form-check-label" for="iphone13Pro">iPhone 13 Pro</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="iphone13ProMax">
+                    <label class="form-check-label" for="iphone13ProMax">iPhone 13 Pro Max</label>
+                </div>
+            </div>
+            
+            <script src="~/Scripts/Filter.js"></script>
+            <!-- Màu sắc -->
+            <div class="mb-4">
+                <h6>Màu sắc</h6>
+                <div class="form-check">
+                    <input class="form-check-input filter-color" type="checkbox" value="purple" id="colorPurple">
+                    <label class="form-check-label" for="colorPurple">Tím</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input filter-color" type="checkbox" value="black" id="colorBlack">
+                    <label class="form-check-label" for="colorBlack">Đen</label>
+                </div>
+            </div>
+        </div>
+
 
