--- a/WebBanHang/Views/Product/Iphone.cshtml
+++ b/WebBanHang/Views/Product/Iphone.cshtml
@@ -6,7 +6,7 @@
 }
 <h2 style="text-align:center">Iphone</h2>
 <!--banner-->
-<div><img src="~/Images/BannerIphone.jpg" alt="Banner Iphone"/></div><!--phần này tự thêm ảnh vào-->        
+<div><img src="~/Images/BannerIphone.jpg" alt="Banner Iphone" /></div><!--phần này tự thêm ảnh vào-->
 <p>đây là trang iphone</p>
 <div class="container my-5">
     <div class="row">
@@ -122,7 +122,7 @@
                     <label class="form-check-label" for="iphone13ProMax">iPhone 13 Pro Max</label>
                 </div>
             </div>
-            
+
             <script src="~/Scripts/Filter.js"></script>
             <!-- Màu sắc -->
             <div class="mb-4">
@@ -137,5 +137,5 @@
                 </div>
             </div>
         </div>
-
-
+    </div>
+</div>
