thêm css cho box

--- a/WebBanHang/Views/Home/Index.cshtml
+++ b/WebBanHang/Views/Home/Index.cshtml
@@ -1,22 +1,116 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
+<link rel="stylesheet" href="~/Content/MyStyle.css">
 <main>
     <!--Banner-->
     <div class="Banner">
         <img src="/Content/images/banner.jpg" alt="Banner" class="img-fluid" /><!--phần này tự thêm ảnh vào-->
     </div>
+
+
+
     <div style="text-align:center">iPhone</div>
+
     <!-- thêm sản phẩm iPhone vào-->
+    <div class="container">
+        <div class="row gx-4">
+            <div class="col-md-4">
+                <div class="box box-1 text-white p-3"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="box box-2 text-white p-3"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="box box-3 text-white p-3"></div>
+            </div>
+        </div>
+    </div>
+
+
+
     <div style="text-align:center">iPad</div>
     <!--thêm sp ipad vào-->
-    ,<div style="text-align:center">Mac</div>
+    <div class="container">
+        <div class="row gx-4">
+            <div class="col-md-4">
+                <div class="box box-1 bg-primary text-white p-3"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="box box-2 bg-success text-white p-3"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="box box-3 bg-dark text-white p-3"></div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div style="text-align:center">Mac</div>
     <!--thêm sp mac vào-->
+    <div class="container">
+        <div class="row gx-4">
+            <div class="col-md-4">
+                <div class="box box-1 bg-primary text-white p-3"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="box box-2 bg-success text-white p-3"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="box box-3 bg-dark text-white p-3"></div>
+            </div>
+        </div>
+    </div>
+
+
     <div style="text-align:center">Watch</div>
     <!--thêm sp watch vào-->
+    <div class="container">
+        <div class="row gx-4">
+            <div class="col-md-4">
+                <div class="box box-1 bg-primary text-white p-3"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="box box-2 bg-success text-white p-3"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="box box-3 bg-dark text-white p-3"></div>
+            </div>
+        </div>
+    </div>
+
+
     <div style="text-align:center">Âm thanh</div>
     <!--thêm sp âm thanh vào-->
+    <div class="container">
+        <div class="row gx-4">
+            <div class="col-md-4">
+                <div class="box box-1 bg-primary text-white p-3"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="box box-2 bg-success text-white p-3"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="box box-3 bg-dark text-white p-3"></div>
+            </div>
+        </div>
+    </div>
+
+
     <div style="text-align:center">Phụ kiện</div>
     <!--thêm sp phụ kiện vào-->
+    <div class="container">
+        <div class="row gx-4">
+            <div class="col-md-4">
+                <div class="box box-1 bg-primary text-white p-3"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="box box-2 bg-success text-white p-3"></div>
+            </div>
+            <div class="col-md-4">
+                <div class="box box-3 bg-dark text-white p-3"></div>
+            </div>
+        </div>
+    </div>
 </main>
