--- a/WebBanHang/Views/Home/Index.cshtml
+++ b/WebBanHang/Views/Home/Index.cshtml
@@ -11,7 +11,6 @@
 
 
     <div style="text-align:center">iPhone</div>
-
     <!-- thêm sản phẩm iPhone vào-->
     <div class="container">
         <div class="row gx-4">
@@ -34,13 +33,13 @@
     <div class="container">
         <div class="row gx-4">
             <div class="col-md-4">
-                <div class="box box-1 bg-primary text-white p-3"></div>
+                <div class="box box-1 text-white p-3"></div>
             </div>
             <div class="col-md-4">
-                <div class="box box-2 bg-success text-white p-3"></div>
+                <div class="box box-2 text-white p-3"></div>
             </div>
             <div class="col-md-4">
-                <div class="box box-3 bg-dark text-white p-3"></div>
+                <div class="box box-3 text-white p-3"></div>
             </div>
         </div>
     </div>
@@ -52,13 +51,13 @@
     <div class="container">
         <div class="row gx-4">
             <div class="col-md-4">
-                <div class="box box-1 bg-primary text-white p-3"></div>
+                <div class="box box-1 text-white p-3"></div>
             </div>
             <div class="col-md-4">
-                <div class="box box-2 bg-success text-white p-3"></div>
+                <div class="box box-2 text-white p-3"></div>
             </div>
             <div class="col-md-4">
-                <div class="box box-3 bg-dark text-white p-3"></div>
+                <div class="box box-3 text-white p-3"></div>
             </div>
         </div>
     </div>
@@ -69,13 +68,13 @@
     <div class="container">
         <div class="row gx-4">
             <div class="col-md-4">
-                <div class="box box-1 bg-primary text-white p-3"></div>
+                <div class="box box-1 text-white p-3"></div>
             </div>
             <div class="col-md-4">
-                <div class="box box-2 bg-success text-white p-3"></div>
+                <div class="box box-2 text-white p-3"></div>
             </div>
             <div class="col-md-4">
-                <div class="box box-3 bg-dark text-white p-3"></div>
+                <div class="box box-3 text-white p-3"></div>
             </div>
         </div>
     </div>
@@ -86,13 +85,13 @@
     <div class="container">
         <div class="row gx-4">
             <div class="col-md-4">
-                <div class="box box-1 bg-primary text-white p-3"></div>
+                <div class="box box-1 text-white p-3"></div>
             </div>
             <div class="col-md-4">
-                <div class="box box-2 bg-success text-white p-3"></div>
+                <div class="box box-2 text-white p-3"></div>
             </div>
             <div class="col-md-4">
-                <div class="box box-3 bg-dark text-white p-3"></div>
+                <div class="box box-3 text-white p-3"></div>
             </div>
         </div>
     </div>
@@ -103,13 +102,13 @@
     <div class="container">
         <div class="row gx-4">
             <div class="col-md-4">
-                <div class="box box-1 bg-primary text-white p-3"></div>
+                <div class="box box-1 text-white p-3"></div>
             </div>
             <div class="col-md-4">
-                <div class="box box-2 bg-success text-white p-3"></div>
+                <div class="box box-2 text-white p-3"></div>
             </div>
             <div class="col-md-4">
-                <div class="box box-3 bg-dark text-white p-3"></div>
+                <div class="box box-3 text-white p-3"></div>
             </div>
         </div>
     </div>
