thay đổi kích thước banner

--- a/WebBanHang/Views/Product/Iphone.cshtml
+++ b/WebBanHang/Views/Product/Iphone.cshtml
@@ -6,7 +6,7 @@
 }
 <h2 style="text-align:center">Iphone</h2>
 <!--banner-->
-<div><img src="~/Images/BannerIphone.jpg" alt="Banner Iphone" /></div><!--phần này tự thêm ảnh vào-->
+<img src="~/Images/BannerIphone.jpg" style="max-width: 100%; height: auto;" alt="Banner Iphone" /><!--phần này tự thêm ảnh vào-->
 <p>đây là trang iphone</p>
 <div class="container my-5">
     <div class="row">
