--- a/WebBanHang/Views/Product/Iphone.cshtml
+++ b/WebBanHang/Views/Product/Iphone.cshtml
@@ -6,9 +6,8 @@
 }
 <h2 style="text-align:center">Iphone</h2>
 <!--banner-->
-<img src="~/Images/BannerIphone.jpg" style="max-width: 100%; height: auto;" alt="Banner Iphone" /><!--phần này tự thêm ảnh vào-->
-<p>đây là trang iphone</p>
-<div class="container my-5">
+<div class="text-center"><img src="~/Images/BannerIPhone.jpg" style="max-width: 100%; height: auto; text-align:center" alt="Banner Iphone" /></div><!--phần này tự thêm ảnh vào-->
+<div class="container my-5"><!--check box-->
     <div class="row">
         <!-- Bộ lọc bên trái -->
         <div class="col-md-3">
@@ -139,3 +138,4 @@
         </div>
     </div>
 </div>
+
