--- a/WebBanHang/Views/Shared/_Layout.cshtml
+++ b/WebBanHang/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar container-fluid row">
             <ul class="nav-list">
                 <li>@Html.ActionLink("Trang chủ", "Index", "Home")</li>
                 <li>@Html.ActionLink("Iphone", "Iphone", "Product")</li>
